# stt

./: .gitignore  README.md  pyproject.toml  requirements.txt  stt.py
.claude/: settings.local.json
