[project]
name = "stt-cli"
version = "2.0.0"
description = "Speech-to-text CLI tool"
requires-python = ">=3.10"
dependencies = [
    "onnx-asr[hub]>=0.10.0",
    "onnxruntime>=1.24.2",
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
cuda = ["onnxruntime-gpu>=1.24.2"]

[project.scripts]
stt = "stt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["stt.py"]
